--- a/src/App.css
+++ b/src/App.css
@@ -36,3 +36,16 @@
     transform: rotate(360deg);
   }
 }
+::-webkit-scrollbar{
+  width:25px;
+}
+::-webkit-scrollbar-track{
+  background:#dc3534;
+}
+::-webkit-scrollbar-thumb{
+  background-image: linear-gradient(red,yellow);
+  border-radius:  25px;
+}
+::-webkit-scrollbar-thumb:hover{
+  background-image: linear-gradient(#ee0970,#ff6a00);
+}
