--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,340 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+.dndflow {
+  flex-direction: row;
+  display: flex;
+  flex-grow: 1;
+  height: 100%;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.dndflow aside {
+  width: 88%;
+  padding: 15px 10px;
+  font-size: 12px;
+  background: #fcfcfc;
+}
+
+.dndflow aside .description {
+  margin-bottom: 10px;
+}
+
+.dndflow .dndnode {
+  height: 20px;
+  padding: 4px;
+  border-radius: 2px;
+  margin-bottom: 10px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  cursor: grab;
+}
+
+.dndflow .dndnode.input {
+  border-color: #0041d0;
+}
+
+.dndflow .dndnode.output {
+  border-color: #ff0072;
+}
+
+.dndflow .reactflow-wrapper {
+  flex-grow: 1;
+  height: 100%;
+}
+
+.dndflow .selectall {
+  margin-top: 10px;
+}
+
+@media screen and (min-width: 768px) {
+  .dndflow {
+    flex-direction: row;
+  }
+
+  .dndflow aside {
+    width: 20%;
+    max-width: 250px;
+  }
+}
+
+.text-updater-node {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 50px;
+  height: 67px;
+  border: 1px solid #eee;
+  border-radius: 5px;
+  background: #f2f4f5;
+}
+
+.empty-node {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 48px;
+  height: 49px;
+  border: dotted;
+  padding: 5px;
+  color: #a48fc3;
+  border-radius: 5px;
+  z-index: -1;
+}
+
+.text-updater-node label {
+  display: block;
+  color: #777;
+  font-size: 12px;
+}
+.css-ufscxh {
+  width: 20%;
+  border-right: 1px solid grey;
+}
+.dndflow aside {
+  width: 100%;
+  max-width: 250px;
+}
+.tree {
+  display: flex;
+  align-items: center;
+}
+.logo {
+  display: flex;
+  align-items: center;
+}
+.header {
+  padding: 2px;
+  border-bottom: 1px solid gray;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  background-color: #68459b;
+  color: #fefefe;
+  align-items: center;
+}
+.css-ufscxh {
+  width: 21% !important;
+}
+.grid-container {
+  display: grid;
+  grid-template-columns: auto auto;
+  background-color: #2196f3;
+  padding: 10px;
+}
+.container {
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.dragCard {
+  flex: 50%;
+}
+.card {
+  height: 100px;
+  width: 100px;
+  margin: 2px;
+  background: #f2f4f5;
+}
+.css-hip9hq-MuiPaper-root-MuiAppBar-root {
+  background: #68459b;
+}
+.header {
+  padding: 2px;
+  border-bottom: 1px solid gray;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  background-color: #68459b;
+  color: #fefefe;
+  align-items: center;
+  width: 100%;
+}
+.toolbar {
+  display: flex;
+  justify-content: end;
+  border-radius: 5px;
+  border: 2px solid #eceef0;
+  padding: 18px;
+  width: 1208px;
+  height: 15px;
+}
+
+.react-flow__node.highlight {
+  background-color: #ff0072;
+  color: red;
+}
+
+::-webkit-scrollbar {
+  width: 15px;
+}
+::-webkit-scrollbar-track {
+  background: white;
+}
+::-webkit-scrollbar-thumb {
+  background-image: linear-gradient(#d3d3d3, #e5e4e2);
+  border-radius: 15px;
+}
+::-webkit-scrollbar-thumb:hover {
+  background-image: linear-gradient(#d3d3d3, #c0c0c0);
+}
+.block {
+  width: 107px;
+  left: 19px;
+  font-family: "Montserrat";
+  font-weight: 600;
+  font-size: 27px;
+  line-height: 24px;
+  display: flex;
+  justify-content: center;
+  color: #143753;
+}
+.blockbackarrow {
+  display: flex;
+  justify-content: space-between;
+  align-items: baseline;
+}
+.backarrow {
+  width: 36px;
+  height: 36px;
+  border-radius: 6px;
+  left: 237px;
+  top: 10px;
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+  background: #d6dee5;
+}
+.search {
+  border: 1px solid #000;
+  padding: -3px 12px;
+  border-radius: 50px;
+}
+.MuiBox-root css-19kzrtu:hover {
+  background-color: #eee !important;
+}
+.react-flow__node {
+  z-index: 0;
+  transform: translate(130px, 50px);
+  pointer-events: all;
+  visibility: visible;
+  width: 50px;
+  height: -2px !important;
+}
+.undo_redo {
+  /* position: absolute; */
+  left: 8.33%;
+  right: 8.05%;
+  top: 33.33%;
+  bottom: 33.33%;
+
+  /* Functional/Secondary/40 */
+
+  color: #aebdcb;
+}
+.css-1d6wzja-MuiButton-startIcon > *:nth-of-type(1) {
+  color: #aebdcb;
+}
+.css-1d6wzja-MuiButton-startIcon > *:nth-of-type(1) {
+  color: #345b7c;
+  font-family: "Montserrat";
+  font-style: normal;
+  font-weight: 600;
+  font-size: 26px;
+  line-height: 16px;
+}
+
+.test {
+  background: #d6dee5;
+}
+.publish {
+  color: #eceef0;
+}
+.scheduler {
+  width: 63px;
+  height: 16px;
+  font-family: "Montserrat";
+  font-style: normal;
+  font-weight: 600;
+  font-size: 12px;
+  line-height: 16px;
+  color: #345b7c;
+}
+.zero {
+  font-size: 20px;
+  color: red;
+}
+.tool {
+  color: #badcf2;
+}
+.div-with-svg-inside {
+  color: red;
+}
+.react-flow__node.highlight {
+  background-color: #e1daeb;
+  color: white;
+}
+
+.intersection-flow .react-flow__node {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-weight: 40;
+  border-radius: 1px;
+  border-width: 2px;
+}
+.intersection-flow .react-flow__node.selected,
+.intersection-flow .react-flow__node:focus {
+  border: 1px solid #dfe3e6;
+}
+
+::-moz-selection {
+  /* Code for Firefox */
+  color: red;
+  background: yellow;
+}
+
+::selection :-moz-drag-over {
+  color: red;
+  background: yellow;
+}
+.card:hover {
+  color: #c0c0c0;
+  background: #c0c0c0;
+}
+.text {
+  display: flex;
+  width: 112px;
+  height: 14px;
+  left: 9px;
+  top: 0px;
+  font-family: "Montserrat";
+  font-style: normal;
+  font-weight: 600;
+  font-size: 8px;
+  line-height: 14px;
+  text-align: center;
+  text-transform: uppercase;
+  color: #435f75;
+}
+.text span {
+  align-self: end;
+}
+.react-flow__handle {
+  position: absolute;
+  pointer-events: none;
+
+  background: #fefefe !important;
+  border: 1px solid white;
+  border-radius: 50%;
+  box-shadow: 0px 0px 0px 2px #345b7c;
+  width: 4px;
+  height: 4px;
+  visibility: visible;
+}
+.react-flow__edge-path,
+.react-flow__connection-path {
+  stroke: #b1b1b7;
+  stroke-width: 2 !important;
+  fill: #859db0;
+}
+.onNodeDrag:hover {
+  background-color: greenyellow;
 }
